Add: 초기세팅 추가 - 폴더구조 세팅 - typo 설정

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ npm-debug.*
 *.mobileprovision
 *.orig.*
 web-build/
+carrotSuperSchema_yeonuk.sql
+carrot_super_schema_v0.1.sql
 
 # macOS
 .DS_Store
