--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/material-top-tabs": "^5.2.18",
     "@react-navigation/native": "^5.7.5",
     "@react-navigation/stack": "^5.9.2",
     "expo": "~39.0.2",
@@ -20,6 +21,7 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
+    "react-native-tab-view": "^2.15.1",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
@@ -31,6 +33,7 @@
     "@types/react-native": "~0.63.2",
     "@types/react-redux": "^7.1.9",
     "@types/styled-components": "^5.1.3",
+    "babel-plugin-root-import": "^6.5.0",
     "babel-plugin-styled-components": "^1.11.1",
     "react-native-web": "~0.13.7",
     "typescript": "~3.9.5"
