--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.9.1",
+    "@react-navigation/material-bottom-tabs": "^5.2.19",
     "@react-navigation/material-top-tabs": "^5.2.18",
     "@react-navigation/native": "^5.7.5",
     "@react-navigation/stack": "^5.9.2",
@@ -28,6 +29,7 @@
     "react-native-gesture-handler": "~1.7.0",
     "react-native-image-slider": "^2.0.3",
     "react-native-image-slider-box": "^1.0.12",
+    "react-native-paper": "^4.2.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-screens": "~2.10.1",
     "react-native-tab-view": "^2.15.1",
@@ -37,6 +39,8 @@
     "redux": "^4.0.5",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0",
+    "redux-saga": "^1.1.3",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
