--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "server": "nodemon ./server/server.js"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.9.1",
     "@react-navigation/material-top-tabs": "^5.2.18",
@@ -16,6 +18,10 @@
     "axios": "^0.20.0",
     "expo": "~39.0.2",
     "expo-status-bar": "~1.0.2",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "morgan": "^1.10.0",
+    "mysql2": "^2.2.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.2.tar.gz",
@@ -29,6 +35,8 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
+    "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
@@ -39,7 +47,9 @@
     "@types/styled-components": "^5.1.3",
     "babel-plugin-root-import": "^6.5.0",
     "babel-plugin-styled-components": "^1.11.1",
+    "nodemon": "^2.0.4",
     "react-native-web": "~0.13.7",
+    "sequelize-auto": "^0.6.3",
     "typescript": "~3.9.5"
   },
   "private": true
