--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/stack": "^5.9.2",
     "axios": "^0.20.0",
     "expo": "~39.0.2",
+    "expo-camera": "~9.0.0",
     "expo-status-bar": "~1.0.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
@@ -37,10 +38,10 @@
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
-    "sequelize": "^6.3.5",
-    "sequelize-cli": "^6.2.0",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
+    "sequelize": "^6.3.5",
+    "sequelize-cli": "^6.2.0",
     "styled-components": "^5.2.0"
   },
   "devDependencies": {
