Modify: Node Server 및 API 함수 작성 - Node Server 구조 변경 - Node 부분 TS로 변경 - API 호출 중복되는 부분 함수로 모듈화

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "server": "nodemon ./server/server.js"
+    "server": "nodemon ./server/server.ts"
   },
   "dependencies": {
     "@react-native-community/async-storage": "~1.12.0",
@@ -16,6 +16,8 @@
     "@react-navigation/material-top-tabs": "^5.2.18",
     "@react-navigation/native": "^5.7.5",
     "@react-navigation/stack": "^5.9.2",
+    "@types/express": "^4.17.8",
+    "@types/morgan": "^1.9.1",
     "axios": "^0.20.0",
     "expo": "~39.0.2",
     "expo-camera": "~9.0.0",
@@ -42,7 +44,8 @@
     "redux-thunk": "^2.3.0",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "ts-node": "^9.0.0"
   },
   "devDependencies": {
     "@types/react": "~16.9.35",
