--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.20.0",
     "expo": "~39.0.2",
     "expo-camera": "~9.0.0",
+    "expo-image-picker": "~9.1.0",
     "expo-status-bar": "~1.0.2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
@@ -39,6 +40,7 @@
     "react-native-vector-icons": "^7.1.0",
     "react-native-web": "~0.13.12",
     "react-redux": "^7.2.1",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
